Made recent IE 6 and 7 CSS changes slightly better. (IE 7 no longer flickers on resize.) Also fixed persistent annoying problem of notebook header name being off-center in certain conditions.

--- a/static/css/ie6.css
+++ b/static/css/ie6.css
@@ -4,7 +4,7 @@
 
 #left_area {
   width: auto;
-  margin-left: expression( eval( document.all.everything_area && ( -document.all.everything_area.offsetLeft ) || 0 ) );
+  margin-left: expression( eval( document.all.everything_area && -document.all.everything_area.offsetLeft || 0 ) );
 }
 
 #note_tree_area {
@@ -24,7 +24,7 @@
 
 #link_area {
   position: absolute;
-  width: expression( eval( document.all.everything_area && ( document.all.everything_area.offsetLeft ) || 0 ) );
+  width: expression( eval( document.all.everything_area && document.all.everything_area.offsetLeft || 0 ) );
   top: expression( eval( document.compatMode && document.compatMode == 'CSS1Compat' ) ? documentElement.scrollTop + 30 : document.body.scrollTop + 30 );
 }
 
