--- a/static/css/style.css
+++ b/static/css/style.css
@@ -421,7 +421,7 @@ h1 {
 #notebook_header_area {
   padding: 0.2em;
   margin-top: 1.5em;
-  width: 45em;
+  width: 100%;
 }
 
 #notebook_header_name:hover {
